chamada para javascript externo

--- a/Área de Trabalho/cursos/js/D/aula13/estilo.css
+++ b/Área de Trabalho/cursos/js/D/aula13/estilo.css
@@ -1,16 +1,25 @@
 body{
+    font: normal 14pt Arial;
     color:white;
     background-color: dimgrey;
 }
 
 header{
+    text-align: center;
 
 }
 
 section{
-
+    color: rgb(37, 37, 37);
+    background: white;
+    border-radius: 40px;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.37);
+    padding: 20px;
+    width: 500px;
+    margin: auto;
 }
 
 footer{
-    
+    font-style: oblique;
+    text-align: center;    
 }
