--- a/Área de Trabalho/cursos/js/D/aula12ex2/estilo.css
+++ b/Área de Trabalho/cursos/js/D/aula12ex2/estilo.css
@@ -33,12 +33,8 @@ img{
     margin: auto;
 }
 
-div#imagemdiv{
+div#msg, div#sorte, div#imagemdiv{
     display: flex;
-}
-
-div#msg, div#sorte{
-    display: flex;
-    margin: 10px;
-    padding: 5px;
+    margin: 3px;
+    padding: auto;
 }
