--- a/Área de Trabalho/cursos/js/D/aula12ex2/estilo.css
+++ b/Área de Trabalho/cursos/js/D/aula12ex2/estilo.css
@@ -20,6 +20,7 @@ section{
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    text-align: center;
 }
 
 footer{
