ex 03 aula 12 final centralizado

--- a/Área de Trabalho/cursos/js/D/aula12ex3/estilo.css
+++ b/Área de Trabalho/cursos/js/D/aula12ex3/estilo.css
@@ -16,6 +16,10 @@ section{
     padding: 20px;
     width: 500px;
     margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 footer{
